--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать →</a> 
       </div>
-      <div class="header__main-illustration"><img src="./images/two_again.png" alt="Снова двойка" width="765px" height="608px"></div>
+      <div class="header__main-illustration"><img src="./images/two_again.png" alt="Снова двойка" width="765" height="608"></div>
       <div class="header__square_pic"></div>
     </header>
-    
-
     <main class="content">
       <section class="description">
         <div class="description__two-columns">
           <div class="description__brief">
-            <h1 class="description__brief">Главные проблемы в обучении</h1>
+            <h2 class="description__brief">Главные проблемы в обучении</h2>
           </div>
           <div class="description__main-text">
             <div class="description__paragraph"> 
@@ -45,7 +43,6 @@
           </div>
         </div>
       </section>
-
       <section class="digits">
         <div class="digits digits__title">Цифры и факты</div>
         <div class="digits digits__subtitle">Про учёбу и мозг</div>
@@ -92,27 +89,17 @@
             <div class="digits__table_heading">1889 год</div>
             <div class="digits__table_text">Открытие условного рефлекса</div>
           </div>
-
         </div>
-
-
-
       </section>
-
       <section class="feynman">
-        <img src="./images/feynman.png" width="867px" height="637px" class="feynman__image" alt="feynman">
+        <img src="./images/feynman.png" width="867" height="637" class="feynman__image" alt="Фейнман">
         <div class="feynman__title">Метод Фейнмана</div>
         <div class="feynman__subtitle">Выучить и не забыть.</div>
-        <div class="feynman__link"> 
-          <a href ="#">Подробнее →</a>
-        </div>
-
-
+        <div class="feynman__link"> <a href ="#" class="feynman__link-text">Подробнее →</a></div>
       </section>
-
       <section class="kaufman">
         <div class="kaufman__triangle">
-          <img src="./images/kaufman-triangle.svg" width="877px" height="877px" alt="kaufman__triangle">
+          <img src="./images/kaufman-triangle.svg" width="877" height="877" alt="Треугольник Кауфмана">
         </div>
         <div class="kaufman__title_theme_dark">Принципы обучения</div>
         <div class="kaufman__subtitle_theme_dark">от Джоша Кауфмана</div>
@@ -168,9 +155,7 @@
             <div class="kaufman__heading_theme_dark">10</div>
             <div class="kaufman__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
           </div>
-
         </div>
-
       </section>
     </main>
     <footer class="footer">
@@ -192,14 +177,11 @@
         <div class="footer_column_social">
           <div class="footer__column-heading">Соцсети</div>
           <div class="footer__column-links">
-            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/youtube_color_white.svg" alt="You Tube">You Tube</a></div>
-            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/vk_color_white.svg" alt="VK">VK</a></div>
-            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/tiktok_color_white.svg" alt="Tik Tok">Tik Tok</a></div>
-
+            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/youtube_color_white.svg" width="16" height="16" alt="You Tube">You Tube</a></div>
+            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/vk_color_white.svg" width="16" height="16" alt="VK">VK</a></div>
+            <div class="footer__column-link"><a href="#" class="footer_column_social-icon"><img src="./images/tiktok_color_white.svg" width="16" height="16" alt="Tik Tok">Tik Tok</a></div>
           </div>
- 
         </div>
-
       </div>
     </footer>
   </div>
