--- a/index.html
+++ b/index.html
@@ -1,261 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Научиться учиться</title>
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Mesto</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-<div class="page">
-  <header class="header">
-    <img class="logo logo_place_header" src="./images/logotipe/logo_place_header.svg" alt="Яндекс Практикум">
-    <h1 class="header__title">Научиться учиться</h1>
-    <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a class="header__link" href="#">Узнать &rarr;</a></p>
-    <img class="header__main-illustration" src="./images/header/two_again.png" alt="Снова двойка">
-    <div class="header__square-pic"></div>
+<body class="page">
+<div class="page__content">
+  <header class="header page__section">
+    <img src="./images/logo.svg" alt="Логотип проекта масто" class="logo header__logo">
   </header>
   <main class="content">
-    <section class="description">
-      <div class="two-columns">
-        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не
-            учат тому, как правильно изучать материал.Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
-            но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно
-            уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать
-            его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-        </div>
+    <section class="profile page__section">
+      <div class="profile__image" style="background-image: url('./images/avatar.jpg');"></div>
+      <div class="profile__info">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <button class="profile__edit-button" type="button"></button>
+        <p class="profile__description">Исследователь океана</p>
       </div>
+      <button class="profile__add-button" type="button"></button>
     </section>
-    <section class="technics">
-      <p class="section-title">Техники обучения</p>
-      <p class="section-subtitle ">Пять практик от Барбары Оакли</p>
-      <ul class="cards">
-        <li class="cards__item">
-          <img class="cards__image" src="./images/techniq/cards-attention.png" alt="Два вида внимания">
-          <h4 class="cards__title">Два вида внимания</h4>
-          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
-            мышление.</p>
-        </li>
-
-        <li class="cards__item">
-          <img class="cards__image" src="./images/techniq/cards-recall.png" alt="Рекалл">
-          <h4 class="cards__title">Recall</h4>
-          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-        </li>
-
-        <li class="cards__item">
-          <img class="cards__image" src="./images/techniq/cards-interliving.png" alt="Интерливинг">
-          <h4 class="cards__title">Интерливинг</h4>
-          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-        </li>
-
-        <li class="cards__item">
-          <img class="cards__image" src="./images/techniq/cards-question.png" alt="Вопросы">
-          <h4 class="cards__title">Вопросы</h4>
-          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
-            волнует.</p>
-        </li>
-
-        <li class="cards__item">
-          <img class="cards__image" src="./images/techniq/cards-interliving.png" alt="Иллюзия компетентности">
-          <h4 class="cards__title">Иллюзия компетентности</h4>
-          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
-            владеете новой темой.</p>
-        </li>
-      </ul>
-    </section>
-    <section class="video">
-      <p class="section-title">Видео нa TED</p>
-      <p class="section-subtitle ">Для тех, кто любит прокрастинировать</p>
-      <div class="video__iframes">
-        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-    </section>
-    <section class="oakley">
-      <div class="two-columns">
-        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
-            гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
-            так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
-            тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые
-            трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
-        </div>
-      </div>
-    </section>
-    <section class="feinman">
-      <p class="feinman__tittle">Метод Фейнмана</p>
-      <p class="feinman__subtitle">Выучить и не забыть.</p>
-      <a class="feinman__link" href="#">Подробнее &rarr;</a>
-      <img src="./images/feynmanblock/feynman.png" width="867" height="637" class="feynman__image" alt="Фейнман">
-    </section>
-    <section class="digits">
-      <p class="section-title">Цифры и факты</p>
-      <p class="section-subtitle">Про учёбу и мозг</p>
-      <ul class="table">
-        <li class="table__cell">
-          <h4 class="table__heading">86 миллиардов</h4>
-          <p class="table__text">Число нейронов в мозге человека</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">2.1 миллиарда</h4>
-          <p class="table__text">Число нуждающихся в повышении квалификации</p>
-          <p class="table__text">Всемирный Банк, 2017</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">1000 терабайт</h4>
-          <p class="table__text">Объём памяти человека</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">500 триллионов</h4>
-          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">420 миллионов</h4>
-          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-          <p class="table__text">Всемирный Банк, 2017</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">17–20 лет</h4>
-          <p class="table__text">Пик обучаемости</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">1885 год</h4>
-          <p class="table__text">Открытие кривой забывания</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">1889 год</h4>
-          <p class="table__text">Открытие условного рефлекса</p>
-        </li>
-      </ul>
-    </section>
-    <section class="khan">
-      <div class="khan__container">
-        <p class="khan__author">Салман Хан</p>
-        <h2 class="khan__title">Весь мир — школа</h2>
-        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
-          всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-          смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-        </blockquote>
-        <p class="khan__quote-author">Джордж Лукас</p>
-        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-        <div class="khan__book-container">
-          <img class="khan__book-pic" src="./images/khan-block/khan-book.jpg" alt="Книга Салман Хана">
-          <a class="khan__buy-link" href=#>Купить книгу &rarr;</a>
-        </div>
-      </div>
-    </section>
-    <section class="kaufman">
-      <p class="section-title section-title_theme_dark">Принципы обучения</p>
-      <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-      <ul class="table table_theme_dark">
-        <li class="table__cell">
-          <h4 class="table__heading">1</h4>
-          <p class="table__text">Выберите привлекательный проект.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">2</h4>
-          <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">3</h4>
-          <p class="table__text">Определите целевой уровень мастерства.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">4</h4>
-          <p class="table__text">Разбейте навык на элементы.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">5</h4>
-          <p class="table__text">Приготовьте всё необходимое для занятий.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">6</h4>
-          <p class="table__text">Устраните препятствия для занятий.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">7</h4>
-          <p class="table__text">Выделите специальное время для занятий.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">8</h4>
-          <p class="table__text">Создайте быстрые петли обратной связи.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">9</h4>
-          <p class="table__text">Занимайтесь по расписанию, короткими интенсивными
-            интервалами.</p>
-        </li>
-
-        <li class="table__cell">
-          <h4 class="table__heading">10</h4>
-          <p class="table__text">Уделяйте внимание количеству и скорости.</p>
-        </li>
-      </ul>
-      <img class="kaufman__triangle" src="./images/kaufmanblock/kaufman-triangle.svg" alt="Треугольник Кауфмана">
-    </section>
-
-    <section class="resources">
-      <p class="section-title">Полезные ресурсы</p>
-      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <ul class="resources__logo-zone">
-        <li class="resources__logo-container"><a class="resources__logo-link" href="https://arzamas.academy/" target="_blank"><img class="resources__logo" src="./images/useful/resources-arzamas.svg" alt="Арзамас"></a></li>
-        <li class="resources__logo-container"><a class="resources__logo-link" href="https://nplus1.ru/" target="_blank"><img class="resources__logo" src="./images/useful/resources-n1.svg" alt="Н+1"></a></li>
-        <li class="resources__logo-container"><a class="resources__logo-link" href="https://strelka.com/ru" target="_blank"><img class="resources__logo" src="./images/useful/resources-strelka.svg" alt="Стрелка"></a></li>
-        <li class="resources__logo-container"><a class="resources__logo-link" href="https://polka.academy/" target="_blank"><img class="resources__logo" src="./images/useful/resources-polka.svg" alt="Полка"></a></li>
+    <section class="places page__section">
+      <ul class="places__list">
       </ul>
     </section>
   </main>
-  <footer class="footer">
-    <div class="footer__columns">
-      <div class="footer__column footer__column_content_copyright">
-        <img class="logo logo_place_footer" src="./images/logotipe/logo_place_footer.svg" alt="Яндекс Практикум">
-        <p class="footer__author">&copy; Шкурат Екатерина</p>
-      </div>
-      <div class="footer__column footer__column_content_info">
-        <h4 class="footer__column-heading">О практикуме</h4>
-        <ul class="footer__column-links">
-          <li><a class="footer__column-link" href="#">Главная</a></li>
-          <li><a class="footer__column-link" href="#">Концепция</a></li>
-          <li><a class="footer__column-link" href="#">Наставники</a></li>
-        </ul>
-      </div>
-      <div class="footer__column footer__column_content_social">
-        <h4 class="footer__column-heading">Соцсети</h4>
-        <ul class="footer__column-links">
-          <li><a class="footer__column-link" href="https://facebook.com" target="_blank"><img class="footer__social-icon" src="./images/social-icon/youtube_color_white.svg" alt="ЮТУБ">You tube</a></li>
-          <li><a class="footer__column-link" href="https://vk.com" target="_blank"><img class="footer__social-icon" src="./images/social-icon/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li><a class="footer__column-link" href="https://instagram.com/" target="_blank"><img class="footer__social-icon" src="./images/social-icon/tiktok_color_white.svg" alt="Тик Ток">Tik Tok</a></li>
-        </ul>
-      </div>
-    </div>
+  <footer class="footer page__section">
+    <p class="footer__copyright">
+      © 2024 Shkurat Ekaterina
+    </p>
   </footer>
+  <div class="popup popup_type_edit">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <form class="popup__form" name="edit-profile">
+        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
+        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_new-card">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Новое место</h3>
+      <form class="popup__form" name="new-place">
+        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
+        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_image">
+    <div class="popup__content popup__content_content_image">
+      <button type="button" class="popup__close"></button>
+      <img src="" alt="" class="popup__image">
+      <p class="popup__caption"></p>
+    </div>
+  </div>
 </div>
+<script src="./scripts/cards.js"></script>
+<script src="./scripts/index.js" defer></script>
+
+<template id="card-template">
+  <li class="places__item card">
+    <img class="card__image" src="" alt="" />
+    <button type="button" class="card__delete-button"></button>
+    <div class="card__description">
+      <h2 class="card__title">
+      </h2>
+      <button type="button" class="card__like-button"></button>
+    </div>
+  </li>
+</template>
 </body>
 </html>
