--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   </main>
   <footer class="footer page__section">
     <p class="footer__copyright">
-      © 2024 Shkurat Ekaterina
+      © 2021 Mesto Russia
     </p>
   </footer>
   <div class="popup popup_type_edit">
